--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,11 @@ body {
   margin-bottom: 10px;
 }
 
+.slider {
+  display: flex;
+  transition: transform 0.8s ease;
+}
+
 .thumbnails {
   display: flex;
   overflow: hidden;
