--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -14,6 +14,11 @@
     margin-bottom: 10px;
 }
 
+.slider {
+    display: flex;
+    transition: transform 0.8s ease;
+}
+
 .thumbnails {
     display: flex;
     overflow: hidden;
