--- a/css/style.css
+++ b/css/style.css
@@ -453,6 +453,7 @@ body {
 }
 
 .controls {
+  width: 600px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
@@ -462,6 +463,10 @@ body {
   display: inline-block;
   width: 300px;
   height: 56px;
+}
+
+button span {
+  color: #000;
 }
 
 .image-container {
