--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -19,6 +19,7 @@
 
 
 .controls {
+    width: 600px;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
@@ -28,6 +29,10 @@
     display: inline-block;
     width: 300px;
     height: 56px;
+}
+
+button span {
+    color: #000;
 }
 
 .image-container {
