--- a/css/style.css
+++ b/css/style.css
@@ -413,65 +413,104 @@ template {
   background-color: #003366;
   color: #fff;
   border: none;
-  text-transform: uppercase;
-  width: 60%;
 }
 
-.submit-btn:hover {
+.submit-btn {
+  width: 49%;
+  margin-left: 13px;
+}
+
+.submit-btn:hover,
+.slide-btn:hover {
   background-color: #003399;
 }
 
-body {
-  background-color: #0f0f0f;
+.slide-btn {
+  display: inline-block !important;
+  background-color: #003366;
+  border: 1px solid #003366;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-size: 1.3rem;
   color: #fff;
+  width: 49%;
+  height: 50px;
+}
+
+.custom-next {
+  margin-left: 10px;
+}
+
+body {
+  background-color: #fff;
+  color: #003366;
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 1.5rem;
+  position: relative;
+  overflow: hidden;
 }
 
 .container {
+  position: relative;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
+  position: relative;
+  top: 50%;
+  transform: translateY(35%);
+  z-index: 1;
+  width: 800px;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #fff;
+  align-self: center;
+}
+
+.intro {
+  width: 720px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .image-box {
   justify-content: center;
 }
 
+.image-container img {
+  border-radius: 5px;
+}
+
 .gallery {
   display: flex;
-  justify-content: center;
   overflow: hidden;
   margin: auto;
-  height: 400px;
-  width: 600px;
+  height: 300px;
+  width: 720px;
   margin-bottom: 10px;
 }
 
 .gallery div {
-  width: 600px;
+  width: 720px;
 }
 
 .controls {
-  width: 600px;
-  justify-content: center;
+  width: 720px;
+  justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
 }
 
-.controls button {
-  display: inline-block;
-  width: 300px;
-  height: 56px;
-}
-
-button span {
-  color: #000;
-}
-
-.image-container {
-  padding: 10px;
-  width: 600px !important;
+.image-container img {
+  width: 720px;
+  object-fit: cover;
 }
 
 .slider {
@@ -480,24 +519,30 @@ button span {
   justify-content: space-between;
 }
 
-.slider img {
-  width: 600px;
-  height: 300px;
-  margin-right: 30px;
+.container h1,
+h2,
+p {
+  text-align: center;
 }
 
-.container h1 {
-  text-align: center;
+h1 {
+  padding: 0;
+  padding-top: 20px;
+  margin-bottom: 0;
+}
+
+.intro p {
+  margin-bottom: 50px;
 }
 
 input {
   height: 50px;
+  width: 49%;
   padding-left: 20px;
   border-radius: 5px;
-  background-color: #d3d3d3;
+  background-color: #fff;
   border: 3px solid #003366;
   margin-bottom: 10px;
-  width: 600px;
 }
 
 input:focus {
@@ -510,15 +555,17 @@ input:focus {
 }
 
 .form-container {
-  width: 80%;
+  width: 720px;
   margin-left: auto;
   margin-right: auto;
+  padding-bottom: 20px;
 }
 
 #emailForm {
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  margin-top: 10px;
 }
 
 #email-form label,
@@ -526,17 +573,64 @@ input:focus {
   display: block !important;
 }
 
-label {
-  text-align: center;
-  display: block;
-  width: 60%;
-  text-transform: uppercase;
-  margin-bottom: 5px;
-}
-
 #email {
   display: block;
-  width: 60%;
+  width: 49%;
 }
+
+.grid {
+  width: 100%;
+  top: 0;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  position: absolute;
+  z-index: -1;
+}
+
+.destinations {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.destinations .grid li {
+  height: 600px;
+  padding: 10px;
+  background-clip: content-box;
+  background-size: cover;
+}
+
+.destinations .grid li.large {
+  flex-basis: 40%;
+}
+
+.destinations .grid li.small {
+  flex-basis: 25%;
+}
+
+.destinations .grid li.med {
+  flex-basis: 35%;
+}
+
+/* .seq-in .content {
+  transform: translateY(0);
+  transition: .2s;
+}
+
+.content {
+  transform: translateY(100%);
+}
+
+.seq-in .content {
+transform: translateY(0);
+transition: .25s;
+}
+
+.seq-in .threed{
+  animation-name: threed; 
+  animation-duration: 1s;
+} */
 
 /*# sourceMappingURL=style.css.map */
