--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,12 +1,18 @@
 body {
-    background-color: #0f0f0f;
-    color: #fff;
+    background-color: #fff;
+    color: #003366;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 1.5rem;
+    position: relative;
+    overflow: hidden;
 }
 
 .container {
+    position: relative;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
+    width: 100%;
+    height: 100%;
 }
