--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -4,10 +4,32 @@
     background-color: #003366;
     color: #fff;
     border: none;
-    text-transform: uppercase;
-    width: 60%;
 }
 
-.submit-btn:hover {
+.submit-btn {
+    width: 49%;
+    margin-left: 13px;
+}
+
+.submit-btn:hover,
+.slide-btn:hover {
     background-color: #003399;
+}
+
+
+
+.slide-btn {
+    display: inline-block !important;
+    background-color: #003366;
+    border: 1px solid #003366;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    color: #fff;
+    width: 49%;
+    height: 50px;
+}
+
+.custom-next {
+    margin-left: 10px;
 }
