--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,44 +1,63 @@
-.image-box {
-    justify-content: center;
+.wrapper {
+    position: relative;
+    top: 50%;
+    transform: translateY(35%);
+    z-index: 1;
+    width: 800px;
+    border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #fff;
+    align-self: center;
 }
 
-
-.gallery {
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    margin: auto;
-    height: 400px;
-    width: 600px;
-    margin-bottom: 10px;
-}
-
-.gallery div {
-    width: 600px;
-}
-
-
-.controls {
-    width: 600px;
+.intro {
+    width: 720px;
     justify-content: center;
     margin-left: auto;
     margin-right: auto;
 }
 
-.controls button {
-    display: inline-block;
-    width: 300px;
-    height: 56px;
+
+.image-box {
+    justify-content: center;
 }
 
-button span {
-    color: #000;
+.image-container img {
+    border-radius: 5px;
 }
 
-.image-container {
-    padding: 10px;
-    width: 600px !important;
+
+.gallery {
+    display: flex;
+    overflow: hidden;
+    margin: auto;
+    height: 300px;
+    width: 720px;
+    margin-bottom: 10px;
 }
+
+.gallery div {
+    width: 720px;
+}
+
+
+.controls {
+    width: 720px;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+
+.image-container img {
+    width: 720px;
+    object-fit: cover;
+}
+
+
 
 .slider {
     display: flex;
@@ -46,26 +65,36 @@ button span {
     justify-content: space-between;
 }
 
-.slider img {
-    width: 600px;
-    height: 300px;
-    margin-right: 30px;
+
+
+
+
+
+
+.container h1,
+h2,
+p {
+    text-align: center;
 }
 
+h1 {
+    padding: 0;
+    padding-top: 20px;
+    margin-bottom: 0;
+}
 
-
-.container h1 {
-    text-align: center;
+.intro p {
+    margin-bottom: 50px;
 }
 
 input {
     height: 50px;
+    width: 49%;
     padding-left: 20px;
     border-radius: 5px;
-    background-color: #d3d3d3;
+    background-color: #fff;
     border: 3px solid #003366;
     margin-bottom: 10px;
-    width: 600px;
 }
 
 input:focus {
@@ -80,15 +109,17 @@ input:focus {
 
 
 .form-container {
-    width: 80%;
+    width: 720px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 20px;
 }
 
 #emailForm {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    margin-top: 10px;
 }
 
 
@@ -97,15 +128,66 @@ input:focus {
     display: block !important;
 }
 
-label {
-    text-align: center;
-    display: block;
-    width: 60%;
-    text-transform: uppercase;
-    margin-bottom: 5px;
-}
 
 #email {
     display: block;
-    width: 60%;
+    width: 49%;
 }
+
+// found this background effect on codepen thought it looked pretty cool 
+
+.grid {
+    width: 100%;
+    top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    position: absolute;
+    z-index: -1;
+
+}
+
+.destinations {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.destinations .grid li {
+    height: 600px;
+    padding: 10px;
+    background-clip: content-box;
+    background-size: cover;
+}
+
+.destinations .grid li.large {
+    flex-basis: 40%;
+}
+
+.destinations .grid li.small {
+    flex-basis: 25%;
+}
+
+.destinations .grid li.med {
+    flex-basis: 35%;
+}
+
+/* .seq-in .content {
+  transform: translateY(0);
+  transition: .2s;
+}
+
+.content {
+  transform: translateY(100%);
+}
+
+.seq-in .content {
+transform: translateY(0);
+transition: .25s;
+}
+
+.seq-in .threed{
+  animation-name: threed; 
+  animation-duration: 1s;
+} */
