--- a/css/style.css
+++ b/css/style.css
@@ -407,6 +407,60 @@ template {
   display: none;
 }
 
+.grid {
+  width: 100%;
+  top: 0;
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  position: absolute;
+  z-index: -1;
+}
+
+.destinations {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.destinations .grid li {
+  height: 600px;
+  padding: 10px;
+  background-clip: content-box;
+  background-size: cover;
+}
+
+.destinations .grid li.large {
+  flex-basis: 40%;
+}
+
+.destinations .grid li.small {
+  flex-basis: 25%;
+}
+
+.destinations .grid li.med {
+  flex-basis: 35%;
+}
+
+/* .seq-in .content {
+  transform: translateY(0);
+  transition: .2s;
+}
+
+.content {
+  transform: translateY(100%);
+}
+
+.seq-in .content {
+transform: translateY(0);
+transition: .25s;
+}
+
+.seq-in .threed{
+  animation-name: threed; 
+  animation-duration: 1s;
+} */
 .btn {
   padding: 10px 20px;
   border-radius: 5px;
@@ -578,59 +632,8 @@ input:focus {
   width: 49%;
 }
 
-.grid {
-  width: 100%;
-  top: 0;
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
-  position: absolute;
-  z-index: -1;
+.toast-success {
+  background-color: #003366;
 }
-
-.destinations {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.destinations .grid li {
-  height: 600px;
-  padding: 10px;
-  background-clip: content-box;
-  background-size: cover;
-}
-
-.destinations .grid li.large {
-  flex-basis: 40%;
-}
-
-.destinations .grid li.small {
-  flex-basis: 25%;
-}
-
-.destinations .grid li.med {
-  flex-basis: 35%;
-}
-
-/* .seq-in .content {
-  transform: translateY(0);
-  transition: .2s;
-}
-
-.content {
-  transform: translateY(100%);
-}
-
-.seq-in .content {
-transform: translateY(0);
-transition: .25s;
-}
-
-.seq-in .threed{
-  animation-name: threed; 
-  animation-duration: 1s;
-} */
 
 /*# sourceMappingURL=style.css.map */
