--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -65,9 +65,20 @@
     justify-content: space-between;
 }
 
+// .thumbnails {
+//     height: 50px;
+//     width: 720px;
+//     display: flex;
+// }
 
+// .thumbnails img {
+//     height: 50px;
+//     width: 100%;
+// }
 
-
+// .thumbnail.container {
+//     max-width: 16%
+// }
 
 
 
