--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -24,11 +24,15 @@
 }
 
 .image-container img {
-    border-radius: 5px;
+    border-radius: 0 5px 5px 5px;
 }
 
+.gallery-container {
+    display: block;
+}
 
-.gallery {
+.gallery,
+.assigned-images-gallery {
     display: flex;
     overflow: hidden;
     margin: auto;
@@ -37,16 +41,75 @@
     margin-bottom: 10px;
 }
 
-.gallery div {
+.assigned-images-gallery {
+    flex-wrap: wrap;
+}
+
+.gallery div,
+.assigned-images-gallery div {
     width: 720px;
 }
 
 
-.controls {
+.controls,
+.assigned-controls {
     width: 720px;
+    display: flex;
     justify-content: space-between;
     margin-left: auto;
     margin-right: auto;
+}
+
+.assigned-controls {
+    display: none;
+}
+
+.assigned-controls.active {
+    display: flex;
+}
+
+
+
+#placeholder.hidden {
+    display: none;
+}
+
+
+
+.thumbnails,
+.assigned-thumbnails {
+    width: 720px;
+    height: 80px;
+    margin-left: 40px;
+    margin-right: 40px;
+    justify-content: left;
+}
+
+.thumbnails .slick-track,
+.assigned-thumbnails .slick-track {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.assigned-thumbnails {
+    display: none;
+}
+
+.assigned-thumbnails.active {
+    display: block !important;
+}
+
+.thumbnail,
+.assigned-thumbnail {
+    height: 80px;
+    max-height: 80px;
+    width: 16%;
+    display: inline;
+}
+
+.thumbnail img,
+.assigned-thumbnail img {
+    border-radius: 5px;
 }
 
 
@@ -65,20 +128,42 @@
     justify-content: space-between;
 }
 
-// .thumbnails {
-//     height: 50px;
-//     width: 720px;
-//     display: flex;
-// }
+.sliders-container {
+    position: relative;
+}
 
-// .thumbnails img {
-//     height: 50px;
-//     width: 100%;
-// }
+.assigned-images-container {
+    display: none;
+}
 
-// .thumbnail.container {
-//     max-width: 16%
-// }
+.assigned-images-container.active {
+    display: block;
+}
+
+.img-gen.active,
+.ass-img.active {
+    background-color: #003366;
+    border: 3px solid #d3d3d3f0;
+    color: #fff;
+}
+
+.titles {
+    display: flex;
+    margin-left: 40px;
+    margin-right: 50px;
+}
+
+.titles h2 {
+    padding: 5px;
+    font-size: 1.5rem;
+    background-color: #d3d3d3f0;
+    border: 3px solid #003366;
+    border-radius: 5px 15px 0 0;
+}
+
+
+
+
 
 
 
